Fix layout to not overflow

--- a/views/static/css/main.css
+++ b/views/static/css/main.css
@@ -7,5 +7,17 @@ html {
 }
 
 .chat_item {
-  @apply bg-emerald-400/10 py-1 px-5 rounded-full border border-[#ADDEBE]/20 w-fit;
+  @apply bg-emerald-400/10 py-3 px-5 rounded-2xl border border-[#ADDEBE]/20 w-fit;
+}
+
+#chatPartialContainer::-webkit-scrollbar {
+  width: 0;
+}
+
+#chatPartialContainer::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+#chatPartialContainer::-webkit-scrollbar-thumb {
+  background: transparent;
 }
